--- a/PSC_Trigger.qsf
+++ b/PSC_Trigger.qsf
@@ -42,6 +42,7 @@ set_global_assignment -name DEVICE EP4CE22F17C6
 set_global_assignment -name TOP_LEVEL_ENTITY PSC_Trigger
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 23.1STD.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "16:15:00  FEBRUARY 11, 2024"
+set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name LAST_QUARTUS_VERSION "22.1std.2 Lite Edition"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
@@ -86,9 +87,15 @@ set_global_assignment -name EDA_TEST_BENCH_FILE src/top.v -section_id top
 set_location_assignment PIN_C3 -to pll_clock
 set_instance_assignment -name IO_STANDARD "2.5 V" -to pll_clock
 set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to pll_clock
+set_global_assignment -name VHDL_FILE src/enc_8b10b.vhd
+set_global_assignment -name VERILOG_FILE src/crc8_stream.v
+set_global_assignment -name VERILOG_FILE src/crc8_encoder.v
+set_global_assignment -name VERILOG_FILE src/crc8.v
+set_global_assignment -name VERILOG_FILE src/crc_table.v
 set_global_assignment -name TCL_SCRIPT_FILE scripts/testbench.tcl
 set_global_assignment -name VERILOG_FILE src/top.v
 set_global_assignment -name VERILOG_FILE src/PSC_Trigger.v
 set_global_assignment -name VERILOG_FILE src/positive_edge_detector.v
 set_global_assignment -name QIP_FILE ip/altpll_50_10.qip
+set_global_assignment -name VERILOG_FILE src/shift_register.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
