--- a/PSC_Trigger.qsf
+++ b/PSC_Trigger.qsf
@@ -75,7 +75,7 @@ set_instance_assignment -name IO_STANDARD "2.5 V" -to reset
 set_location_assignment PIN_A3 -to tx_done
 set_instance_assignment -name IO_STANDARD "2.5 V" -to tx_done
 set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to tx_done
-set_global_assignment -name EDA_SIMULATION_TOOL "Questa Intel FPGA (Verilog)"
+set_global_assignment -name EDA_SIMULATION_TOOL "QuestaSim (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS COMMAND_MACRO_MODE -section_id eda_simulation
@@ -98,4 +98,6 @@ set_global_assignment -name VERILOG_FILE src/PSC_Trigger.v
 set_global_assignment -name VERILOG_FILE src/positive_edge_detector.v
 set_global_assignment -name QIP_FILE ip/altpll_50_10.qip
 set_global_assignment -name VERILOG_FILE src/shift_register.v
+set_global_assignment -name EDA_USER_COMPILED_SIMULATION_LIBRARY_DIRECTORY "D:/FPGA/PSC_Trigger/simulation" -section_id eda_simulation
+set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_id eda_simulation
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
