--- a/PSC_Trigger.qsf
+++ b/PSC_Trigger.qsf
@@ -100,4 +100,5 @@ set_global_assignment -name QIP_FILE ip/altpll_50_10.qip
 set_global_assignment -name VERILOG_FILE src/shift_register.v
 set_global_assignment -name EDA_USER_COMPILED_SIMULATION_LIBRARY_DIRECTORY "D:/FPGA/PSC_Trigger/simulation" -section_id eda_simulation
 set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_id eda_simulation
+set_global_assignment -name VERILOG_FILE src/data_rom.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
