--- a/PSC_Trigger.qsf
+++ b/PSC_Trigger.qsf
@@ -72,9 +72,6 @@ set_instance_assignment -name IO_STANDARD "2.5 V" -to psc_output
 set_instance_assignment -name IO_STANDARD "2.5 V" -to evr_trigger
 set_instance_assignment -name IO_STANDARD "2.5 V" -to clk
 set_instance_assignment -name IO_STANDARD "2.5 V" -to reset
-set_location_assignment PIN_A3 -to tx_done
-set_instance_assignment -name IO_STANDARD "2.5 V" -to tx_done
-set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to tx_done
 set_global_assignment -name EDA_SIMULATION_TOOL "QuestaSim (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
@@ -84,9 +81,6 @@ set_global_assignment -name EDA_TEST_BENCH_NAME top -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id top
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME top -section_id top
 set_global_assignment -name EDA_TEST_BENCH_FILE src/top.v -section_id top
-set_location_assignment PIN_C3 -to pll_clock
-set_instance_assignment -name IO_STANDARD "2.5 V" -to pll_clock
-set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to pll_clock
 set_global_assignment -name VHDL_FILE src/enc_8b10b.vhd
 set_global_assignment -name VERILOG_FILE src/crc8_stream.v
 set_global_assignment -name VERILOG_FILE src/crc8_encoder.v
@@ -101,4 +95,6 @@ set_global_assignment -name VERILOG_FILE src/shift_register.v
 set_global_assignment -name EDA_USER_COMPILED_SIMULATION_LIBRARY_DIRECTORY "D:/FPGA/PSC_Trigger/simulation" -section_id eda_simulation
 set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_id eda_simulation
 set_global_assignment -name VERILOG_FILE src/data_rom.v
+set_global_assignment -name FLOW_ENABLE_RTL_VIEWER ON
+set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
