--- a/PSC_Trigger.qsf
+++ b/PSC_Trigger.qsf
@@ -81,6 +81,11 @@ set_global_assignment -name EDA_TEST_BENCH_NAME top -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id top
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME top -section_id top
 set_global_assignment -name EDA_TEST_BENCH_FILE src/top.v -section_id top
+set_global_assignment -name EDA_USER_COMPILED_SIMULATION_LIBRARY_DIRECTORY "D:/FPGA/PSC_Trigger/simulation" -section_id eda_simulation
+set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_id eda_simulation
+set_global_assignment -name FLOW_ENABLE_RTL_VIEWER ON
+set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
+set_global_assignment -name VERILOG_FILE src/trigger_fsm.v
 set_global_assignment -name VHDL_FILE src/enc_8b10b.vhd
 set_global_assignment -name VERILOG_FILE src/crc8_stream.v
 set_global_assignment -name VERILOG_FILE src/crc8_encoder.v
@@ -92,9 +97,5 @@ set_global_assignment -name VERILOG_FILE src/PSC_Trigger.v
 set_global_assignment -name VERILOG_FILE src/positive_edge_detector.v
 set_global_assignment -name QIP_FILE ip/altpll_50_10.qip
 set_global_assignment -name VERILOG_FILE src/shift_register.v
-set_global_assignment -name EDA_USER_COMPILED_SIMULATION_LIBRARY_DIRECTORY "D:/FPGA/PSC_Trigger/simulation" -section_id eda_simulation
-set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_id eda_simulation
 set_global_assignment -name VERILOG_FILE src/data_rom.v
-set_global_assignment -name FLOW_ENABLE_RTL_VIEWER ON
-set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
