--- a/PSC_Trigger.qsf
+++ b/PSC_Trigger.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name DEVICE EP4CE22F17C6
-set_global_assignment -name TOP_LEVEL_ENTITY PSC_Trigger
+set_global_assignment -name TOP_LEVEL_ENTITY psc_trigger
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 23.1STD.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "16:15:00  FEBRUARY 11, 2024"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
@@ -85,17 +85,21 @@ set_global_assignment -name EDA_USER_COMPILED_SIMULATION_LIBRARY_DIRECTORY "D:/F
 set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_id eda_simulation
 set_global_assignment -name FLOW_ENABLE_RTL_VIEWER ON
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
-set_global_assignment -name VERILOG_FILE src/trigger_fsm.v
 set_global_assignment -name VHDL_FILE src/enc_8b10b.vhd
+set_global_assignment -name VERILOG_FILE src/encoder_8b10b_rom.v
+set_global_assignment -name VERILOG_FILE src/encoder_8b10b_fsm.v
+set_global_assignment -name VERILOG_FILE src/encoder_8b10b_core.v
+set_global_assignment -name VERILOG_FILE src/psc_trigger_fsm.v
 set_global_assignment -name VERILOG_FILE src/crc8_stream.v
 set_global_assignment -name VERILOG_FILE src/crc8_encoder.v
-set_global_assignment -name VERILOG_FILE src/crc8.v
-set_global_assignment -name VERILOG_FILE src/crc_table.v
-set_global_assignment -name TCL_SCRIPT_FILE scripts/testbench.tcl
+set_global_assignment -name VERILOG_FILE src/crc8_core.v
+set_global_assignment -name VERILOG_FILE src/crc8_table.v
+set_global_assignment -name VERILOG_FILE src/psc_trigger_core.v
+set_global_assignment -name VERILOG_FILE src/psc_trigger_rising_edge.v
+set_global_assignment -name VERILOG_FILE src/psc_trigger_shift_register.v
+set_global_assignment -name VERILOG_FILE src/psc_trigger_data_rom.v
 set_global_assignment -name VERILOG_FILE src/top.v
-set_global_assignment -name VERILOG_FILE src/PSC_Trigger.v
-set_global_assignment -name VERILOG_FILE src/positive_edge_detector.v
 set_global_assignment -name QIP_FILE ip/altpll_50_10.qip
-set_global_assignment -name VERILOG_FILE src/shift_register.v
-set_global_assignment -name VERILOG_FILE src/data_rom.v
+set_global_assignment -name TCL_SCRIPT_FILE scripts/testbench.tcl
+
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
