--- a/PSC_Trigger.qsf
+++ b/PSC_Trigger.qsf
@@ -209,4 +209,5 @@ set_global_assignment -name TCL_SCRIPT_FILE scripts/testbench.tcl
 set_global_assignment -name VERILOG_FILE src/crc8_lookup_table.v
 set_global_assignment -name QIP_FILE ip/altpll_50_1.qip
 set_global_assignment -name VERILOG_FILE src/psc_trigger_clock_divider.v
+set_global_assignment -name VERILOG_FILE psc_logic_clock.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
