--- a/PSC_Trigger.qsf
+++ b/PSC_Trigger.qsf
@@ -114,7 +114,7 @@ set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS COMMAND_MACRO_MODE -section_id eda_simulation
 	set_global_assignment -name EDA_SIMULATION_RUN_SCRIPT scripts/testbench.tcl -section_id eda_simulation
 	set_global_assignment -name EDA_TEST_BENCH_NAME top -section_id eda_simulation
-	set_global_assignment -name EDA_USER_COMPILED_SIMULATION_LIBRARY_DIRECTORY "D:/FPGA/PSC_Trigger/simulation" -section_id eda_simulation
+	set_global_assignment -name EDA_USER_COMPILED_SIMULATION_LIBRARY_DIRECTORY "C:/psc-trigger/simulation" -section_id eda_simulation
 set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_id eda_simulation
 	set_global_assignment -name EDA_EXTRA_ELAB_OPTION +define+SIM -section_id eda_simulation
 
@@ -210,4 +210,5 @@ set_global_assignment -name VERILOG_FILE src/crc8_lookup_table.v
 set_global_assignment -name QIP_FILE ip/altpll_50_1.qip
 set_global_assignment -name VERILOG_FILE src/psc_trigger_clock_divider.v
 set_global_assignment -name VERILOG_FILE src/psc_logic_clock.v
+
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
