--- a/PSC_Trigger.qsf
+++ b/PSC_Trigger.qsf
@@ -51,7 +51,7 @@ set_global_assignment -name FLOW_ENABLE_RTL_VIEWER ON
 # ==========================
 set_location_assignment PIN_R8 -to clk
 set_location_assignment PIN_E1 -to reset
-set_location_assignment PIN_A6 -to evr_trigger
+set_location_assignment PIN_J15 -to evr_trigger
 set_location_assignment PIN_D3 -to psc_output
 
 # Classic Timing Assignments
@@ -97,9 +97,9 @@ set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -
 
 	# EDA Netlist Writer Assignments
 	# ==============================
-	set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id top
-	set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME top -section_id top
-	set_global_assignment -name EDA_TEST_BENCH_FILE src/top.v -section_id top
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id top
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME top -section_id top
+set_global_assignment -name EDA_TEST_BENCH_FILE src/top.v -section_id top
 
 # end EDA_TEST_BENCH_SETTINGS(top)
 # --------------------------------
@@ -109,14 +109,14 @@ set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -
 
 	# EDA Netlist Writer Assignments
 	# ==============================
-	set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
-	set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS COMMAND_MACRO_MODE -section_id eda_simulation
-	set_global_assignment -name EDA_SIMULATION_RUN_SCRIPT scripts/testbench.tcl -section_id eda_simulation
-	set_global_assignment -name EDA_TEST_BENCH_NAME top -section_id eda_simulation
-	set_global_assignment -name EDA_USER_COMPILED_SIMULATION_LIBRARY_DIRECTORY "C:/psc-trigger/simulation" -section_id eda_simulation
+set_global_assignment -name EDA_SIMULATION_RUN_SCRIPT scripts/testbench.tcl -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME top -section_id eda_simulation
+set_global_assignment -name EDA_USER_COMPILED_SIMULATION_LIBRARY_DIRECTORY "C:/psc-trigger/simulation" -section_id eda_simulation
 set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_id eda_simulation
-	set_global_assignment -name EDA_EXTRA_ELAB_OPTION +define+SIM -section_id eda_simulation
+set_global_assignment -name EDA_EXTRA_ELAB_OPTION +define+SIM -section_id eda_simulation
 
 # end EDA_TOOL_SETTINGS(eda_simulation)
 # -------------------------------------
@@ -126,7 +126,7 @@ set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_i
 
 	# EDA Netlist Writer Assignments
 	# ==============================
-	set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
 
 # end EDA_TOOL_SETTINGS(eda_board_design_boundary_scan)
 # -----------------------------------------------------
@@ -136,7 +136,7 @@ set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_i
 
 	# EDA Netlist Writer Assignments
 	# ==============================
-	set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
 
 # end EDA_TOOL_SETTINGS(eda_board_design_timing)
 # ----------------------------------------------
@@ -146,7 +146,7 @@ set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_i
 
 	# EDA Netlist Writer Assignments
 	# ==============================
-	set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 
 # end EDA_TOOL_SETTINGS(eda_board_design_symbol)
 # ----------------------------------------------
@@ -156,7 +156,7 @@ set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_i
 
 	# EDA Netlist Writer Assignments
 	# ==============================
-	set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 
 # end EDA_TOOL_SETTINGS(eda_board_design_signal_integrity)
 # --------------------------------------------------------
@@ -166,23 +166,23 @@ set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_i
 
 	# Fitter Assignments
 	# ==================
-	set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to evr_trigger
-	set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to clk
-	set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to psc_output
-	set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to reset
-	set_instance_assignment -name IO_STANDARD "2.5 V" -to psc_output
-	set_instance_assignment -name IO_STANDARD "2.5 V" -to evr_trigger
-	set_instance_assignment -name IO_STANDARD "2.5 V" -to clk
-	set_instance_assignment -name IO_STANDARD "2.5 V" -to reset
+set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to evr_trigger
+set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to clk
+set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to psc_output
+set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to reset
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to psc_output
+set_instance_assignment -name IO_STANDARD "2.5 V" -to evr_trigger
+set_instance_assignment -name IO_STANDARD "2.5 V" -to clk
+set_instance_assignment -name IO_STANDARD "2.5 V" -to reset
 
 	# start DESIGN_PARTITION(Top)
 	# ---------------------------
 
 		# Incremental Compilation Assignments
 		# ===================================
-		set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-		set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-		set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 
 	# end DESIGN_PARTITION(Top)
 	# -------------------------
@@ -211,6 +211,10 @@ set_global_assignment -name QIP_FILE ip/altpll_50_1.qip
 set_global_assignment -name VERILOG_FILE src/psc_trigger_clock_divider.v
 set_global_assignment -name VERILOG_FILE src/psc_logic_clock.v
 
-set_location_assignment PIN_A3 -to clk_10_logic
+set_location_assignment PIN_B5 -to clk_10_logic
 set_location_assignment PIN_C6 -to load_register
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to load_register
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clk_10_logic
+set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to load_register
+set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to clk_10_logic
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
