--- a/PSC_Trigger.qsf
+++ b/PSC_Trigger.qsf
@@ -190,26 +190,6 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 # end ENTITY(psc_trigger)
 # -----------------------
 set_global_assignment -name EDA_GENERATE_RTL_SIMULATION_COMMAND_SCRIPT ON -section_id eda_simulation
-set_global_assignment -name VHDL_FILE src/enc_8b10b.vhd
-set_global_assignment -name VERILOG_FILE src/encoder_8b10b_rom.v
-set_global_assignment -name VERILOG_FILE src/encoder_8b10b_fsm.v
-set_global_assignment -name VERILOG_FILE src/encoder_8b10b_core.v
-set_global_assignment -name VERILOG_FILE src/psc_trigger_fsm.v
-set_global_assignment -name VERILOG_FILE src/crc8_stream.v
-set_global_assignment -name VERILOG_FILE src/crc8_encoder.v
-set_global_assignment -name VERILOG_FILE src/crc8_core.v
-set_global_assignment -name VERILOG_FILE src/crc8_table.v
-set_global_assignment -name VERILOG_FILE src/psc_trigger_core.v
-set_global_assignment -name VERILOG_FILE src/psc_trigger_rising_edge.v
-set_global_assignment -name VERILOG_FILE src/psc_trigger_shift_register.v
-set_global_assignment -name VERILOG_FILE src/psc_trigger_data_rom.v
-set_global_assignment -name VERILOG_FILE src/top.v
-set_global_assignment -name QIP_FILE ip/altpll_50_10.qip
-set_global_assignment -name TCL_SCRIPT_FILE scripts/testbench.tcl
-set_global_assignment -name VERILOG_FILE src/crc8_lookup_table.v
-set_global_assignment -name QIP_FILE ip/altpll_50_1.qip
-set_global_assignment -name VERILOG_FILE src/psc_trigger_clock_divider.v
-set_global_assignment -name VERILOG_FILE src/psc_logic_clock.v
 
 set_location_assignment PIN_A3 -to clk_10_logic
 set_location_assignment PIN_B5 -to load_register
@@ -217,4 +197,18 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to load_register
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clk_10_logic
 set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to load_register
 set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to clk_10_logic
+set_global_assignment -name VERILOG_FILE src/trigger_controller.v
+set_global_assignment -name VERILOG_FILE src/shift_register.v
+set_global_assignment -name VERILOG_FILE src/rising_edge_detector.v
+set_global_assignment -name VERILOG_FILE src/clock_divider.v
+set_global_assignment -name VHDL_FILE src/enc_8b10b.vhd
+set_global_assignment -name VERILOG_FILE src/crc8_stream.v
+set_global_assignment -name VERILOG_FILE src/crc8_core.v
+set_global_assignment -name VERILOG_FILE src/crc8_table.v
+set_global_assignment -name VERILOG_FILE src/psc_trigger_core.v
+set_global_assignment -name VERILOG_FILE src/top.v
+set_global_assignment -name QIP_FILE ip/altpll_50_10.qip
+set_global_assignment -name TCL_SCRIPT_FILE scripts/testbench.tcl
+set_global_assignment -name QIP_FILE ip/altpll_50_1.qip
+set_global_assignment -name VERILOG_FILE src/psc_logic_clock.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
