--- a/PSC_Trigger.qsf
+++ b/PSC_Trigger.qsf
@@ -68,7 +68,6 @@ set_location_assignment PIN_E1 -to reset
 set_location_assignment PIN_J15 -to evr_trigger
 set_location_assignment PIN_D3 -to psc_output
 set_location_assignment PIN_A3 -to clk_10_logic
-set_location_assignment PIN_B5 -to load_register
 
 # Classic Timing Assignments
 # ==========================
@@ -154,9 +153,7 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to psc_output
 set_instance_assignment -name IO_STANDARD "2.5 V" -to evr_trigger
 set_instance_assignment -name IO_STANDARD "2.5 V" -to clk
 set_instance_assignment -name IO_STANDARD "2.5 V" -to reset
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to load_register
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clk_10_logic
-set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to load_register
 set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to clk_10_logic
 
 	# start DESIGN_PARTITION(Top)
@@ -174,4 +171,7 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 # end ENTITY(psc_trigger)
 # -----------------------
 
+set_location_assignment PIN_B5 -to trigger_out
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to trigger_out
+set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to trigger_out
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
